Added echo to test triggering of pr review workflow

--- a/.github/workflows/coding-agent-update-pr.yml
+++ b/.github/workflows/coding-agent-update-pr.yml
@@ -8,5 +8,11 @@ jobs:
     name: Generate updated code
     if: contains(github.event.pull_request.labels.*.name, 'coding-agent')
     runs-on: ubuntu-latest
+    steps:
+      - name: Address PR review
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          echo "Addressing PR review for pull request #${{ github.event.pull_request.number }}"
 
   
