--- a/.github/workflows/coding-agent-create-pr.yml
+++ b/.github/workflows/coding-agent-create-pr.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Create branch
         run: git checkout -b issue-${{ inputs.issue_number }}
       - name: Upload branch
-        run: git push origin issue-${{ inputs.issue_number }}
+        run: git push
       - name: Generate code from issue description
         uses: widmoser/agent@c2245b7e57aabc3fc1ad8461522c2244fc5d94fd
         with:
