--- a/.github/workflows/coding-agent-create-pr.yml
+++ b/.github/workflows/coding-agent-create-pr.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Create branch
         run: git checkout -b issue-${{ inputs.issue_number }}
       - name: Pull changes
